# Forza_Horizon_5

./: LICENSE  main.py  models.py  pyproject.toml  suspension.py  vehicle.py
src/base_class/: base_class.py
src/core/: antiroll.py  damping.py  differential.py  gears.py  spring.py  terrain.py  weight.py
src/formulae/: formulae.py
src/math/: formulae.py
src/models/: antirollbar.py  suspension.py  terrain.py  vehicle.py
